# atms-user-svc

./: pyproject.toml
src/common/: upload_s3.py
src/user/: db.py  db_feed.py  db_user.py  models.py  server.py  util.py
src/user/handlers/: __init__.py  auth.py  feed.py  handlers.py  user.py
src/user/handlers/models/: feed.py
src/user/middleware/: __init__.py  api_request.py  api_response.py  auth.py
src/user/tasks/: update_follower_count.py  update_post_counts.py
