[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["okvos <okvos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
aiomysql = "^0.1.1"
cattrs = "^22.2.0"
black = "^22.10.0"
isort = "^5.10.1"
orjson = "^3.8.1"
bcrypt = "^4.0.1"
aiohttp = "^3.8.3"
aiohttp_cors = "^0.7.0"
aiohttp-session = "^2.12.0"
aiohttp_security = "^0.4.0"
cryptography = "^39.0.0"
boto3 = "^1.26.65"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
